--- a/src/components/headerAndForm/HeaderAndForm.css
+++ b/src/components/headerAndForm/HeaderAndForm.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 40vh;
+    gap: 2rem;
 }
 
 .label-input {
@@ -59,10 +59,6 @@ input:hover, button:hover {
 
 @media only screen and (max-width: 500px) {
 
-    .form {
-        gap: 1rem;
-    }
-
     .label-input {
         display: flex;
         flex-direction: column;
@@ -80,5 +76,6 @@ input:hover, button:hover {
 
     .title {
         font-size: 3rem;
+        margin-bottom: 2rem;
     }
 }
