--- a/src/components/headerAndForm/HeaderAndForm.css
+++ b/src/components/headerAndForm/HeaderAndForm.css
@@ -35,6 +35,8 @@
 
 .input {
     display:-webkit-flex;
+    flex: 1 0 0;
+    -webkit-flex: 1 0 0;
     width: 60%;
     border-radius: 9px;
     font-size: 1.5rem;
